2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/module_groups.php: fixed a unset $fired var.
	
	Fixes: #3102791

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/events/events_marquee.php: fixed the error SQL message and
	save corretly the audit.
	
	Fixes: #3102788

2010-11-04  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/manage_export.php,
	  godmode/servers/manage_export_form.php: Moved to Pandora FMS
	  Enteprise.

	* godmode/menu.php: Removed the export targets menu entry.

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/users/configure_user.php: fixed lost lines deleted in previous
	commits (sorry).

2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/system_info.php: change the funcionality of extension, now
	generate a zip file in Pandora Console mode, and fixed the execution in the
	term, and move to setup menu.
	
	Fixes: #3102834
	
	* include/config_process.php: cleaned source code style.

2010-11-04  Raul Mateos <raulofpandora@gmail.com>

	* general/login_page.php: Fixed validation for XHTML 1.0 Transitional.

2010-11-03  Raul Mateos <raulofpandora@gmail.com>

	* index.php: Updated year :-D

	* general/footer.php, header.php: Updated year. Fixed some HTML strings
	to improve W3C validation. A lot of work to do in this area.

2010-11-03  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_html.php: added the function
	"print_autocomplete_modules". This function is same to magic-select box for
	agents instead this for modules.
	
	* include/javascript/jquery.ui.datepicker.js,
	include/javascript/jquery.ui.droppable.js: fixed end of lines that it
	haven't semicolon end char.
	
	* include/ajax/module.php: fix version of file that responds to ajax
	request for the magic-select box for modules.
	
	* include/functions_ui.php: in function "format_alert_row" use new call
	for the "isAlertInPolicy2".
	